exercise8-kittens-carousel-static-website-ec2/security-groups.tf
resource "aws_security_group" "kittens-secgrp" {
  name        = "kittens-secgrp"
  description = "Allow TLS inbound traffic"
  
  ingress {
    description = "allow port 22"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    description = "allow port 80"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "kittens-secgrp"
  }
}
